--- a/m6_sistema_capacitaciones/src/main/resources/application.properties
+++ b/m6_sistema_capacitaciones/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.h2.console.path=/h2-console
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+
+server.port=${PORT:8080}
